--- a/index.html
+++ b/index.html
@@ -224,6 +224,25 @@
                         <h3 class="mb-5 text-center"><a href="#" class="email-link">
                           Video
                        </a></h3>
+                       
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=400px, initial-scale=1.0">
+    <title>Video Player</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="video-container">
+        <video id="myVideo" controls>
+            <source src="video/FINALDEMOREEL01_2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
+
                       
 
                         <div class="owl-carousel owl-theme" id="testimonials-carousel1">
